--- a/web/logme-web/src/style.css
+++ b/web/logme-web/src/style.css
@@ -1,5 +1,5 @@
 .box {
-    @apply block p-6  bg-white rounded-lg border border-gray-200 shadow-xl  shadow-lime-500/50 hover:bg-gray-100 dark:bg-gray-900 dark:border-gray-700 dark:hover:bg-gray-800
+    @apply block p-6  bg-white rounded-lg border border-gray-200 shadow-xl  shadow-blue-400/60 hover:bg-gray-100 dark:bg-gray-900 dark:border-gray-800 dark:hover:bg-gray-800
 }
 
 .box-header {
